# MCPServers

./: .gitignore  .mcp.json  BUILD_SPEC.md  CHANGELOG.md  CLAUDE.md  README.md
docs/: mcpize-listing.md
servers/grok-api-wrapper/: README.md  pyproject.toml
servers/grok-api-wrapper/src/grok_api_wrapper/: __init__.py  __main__.py  cache.py  cost_tracker.py  grok_client.py  rate_limiter.py  server.py
servers/grok-api-wrapper/tests/: __init__.py  test_server.py
servers/multi-project-coordinator/: LICENSE  README.md  pyproject.toml  server.json
servers/multi-project-coordinator/src/multi_project_coordinator/: __init__.py  __main__.py  server.py
servers/multi-project-coordinator/tests/: __init__.py  test_server.py
