[project]
name = "grok-api-wrapper"
version = "0.1.0"
description = "MCP server wrapping xAI's Grok API — Chat, Imagine, and Collections with cost tracking, rate limiting, and caching."
authors = [{name = "Mason Meredith"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "grok", "xai", "ai", "claude-code", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
grok-api-wrapper = "grok_api_wrapper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_api_wrapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
