[project]
name = "multi-project-coordinator"
version = "0.1.0"
description = "MCP server for managing multiple project states in Claude Code. Track dashboards, tasks, logs, and pipelines across repos. Free & open source."
authors = [{name = "Mason Meredith"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "project-management", "claude-code", "multi-repo", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
multi-project-coordinator = "multi_project_coordinator.server:main"

[project.urls]
Homepage = "https://mcpize.com"
Repository = "https://github.com/masonmeredith/MCPServers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_project_coordinator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
